Fixes #13920: Remove jquery-ui related css libraries

--- a/rudder-web/src/main/webapp/style/bootstrap/tw-bs-bootstrap-3.3.7.css
+++ b/rudder-web/src/main/webapp/style/bootstrap/tw-bs-bootstrap-3.3.7.css
@@ -133,7 +133,7 @@ input[type="submit"] {
   cursor: pointer;
 }
 button[disabled],
-input[disabled] { 4chan d
+input[disabled] {
   cursor: default;
 }
 button::-moz-focus-inner,
