--- a/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
+++ b/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
@@ -101,7 +101,7 @@
               You may override this global setting just for this node below:
             </div>
           </div>
-          <div class="deca">
+          <div>
             <div class="form-group" ng-show="isNodePage">
               <div>
                 <label for="overrideHeartbeat" class="control-label">
